--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -49,7 +49,7 @@ jobs:
           done
 
   build:
-    if: check.steps.changed-files-specific.outputs.any_changed == 'true'
+    if: 'true' == 'true'
     name: Deploy docs
     needs: check
     # The type of runner that the job will run on
