--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,7 +21,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
-    any_changed: ${{ steps.changed-files-specific.outputs.any_changed }}
+    outputs:
+      any_changed: ${{ steps.changed-files-specific.outputs.any_changed }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
