--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -51,7 +51,7 @@ jobs:
   build:
     name: Deploy docs
     needs: check
-    if: needs.check.steps.changed-files-specific.outputs.any_changed
+    if: needs.check.steps.changed-files-specific.outputs.any_changed == 'true'
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
