--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,6 +21,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
+    outputs:
+      any_changed: true
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3
@@ -51,7 +54,7 @@ jobs:
   build:
     name: Deploy docs
     needs: check
-    if: needs.check.steps.changed-files-specific.outputs.any_changed == 'true'
+    if: needs.check.outputs.any_changed
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
