--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     outputs:
-      any_changed: true
+      any_changed: ${{ steps.changed-files-specific.outputs.any_changed }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
