--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -52,6 +52,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
+    steps:
       - name: Set-Up
         run: |
           sudo apt-get install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
