--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -53,6 +53,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - name: Check out
+      - uses: actions/checkout@v3
+
       - name: Set-Up
         run: |
           sudo apt-get install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
@@ -62,17 +65,17 @@ jobs:
           curl https://sh.rustup.rs -sSf | sh -s -- -y
           source ~/.cargo/env
 
-      - name: Build doc
+      - name: Build docs
         run: |
           sh scripts/build-docs/build-docs.sh
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-      #     role-duration-seconds: 3600 # the ttl of the session, in seconds.
-      #     aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-duration-seconds: 3600 # the ttl of the session, in seconds.
+          aws-region: ${{ env.AWS_REGION }}
 
-      # - name: Deploy files to S3
-      #   run: |
-      #     aws s3 sync --delete target/doc s3://${{ env.BUCKET_NAME }}/rust
+      - name: Deploy files to S3
+        run: |
+          aws s3 sync --delete target/doc s3://${{ env.BUCKET_NAME }}/rust
