--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -92,9 +92,11 @@ jobs:
         run: |
           echo 'REPORT!!!'
 
-      - name: Report to slack
-        uses: ravsamhq/notify-slack-action@v1
-        with:
-          status: ${{ job.status }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - run: echo "${{ toJson(github) }}"
+
+      # - name: Report to slack
+      #   uses: ravsamhq/notify-slack-action@v1
+      #   with:
+      #     status: ${{ job.status }}
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
