--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -50,9 +50,8 @@ jobs:
           rustup update stable
           rustup component add llvm-tools-preview
           cargo install grcov
-
-      - name: Test coverage
-        run: |
+      # - name: Test coverage
+      #   run: |
           export CARGO_INCREMENTAL=0
           export SKIP_BUILD_WASM=true
           export BUILD_DUMMY_WASM_BINARY=true
