--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,7 @@ on:
       - master
 jobs:
   print222:
+    runs-on: ubuntu-latest
     steps:
       - name: Print the input tag to STDOUT
         run: echo HELLO
