--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,14 +4,15 @@ on:
     branches:
       - master
 jobs:
-  print222:
+  PRNotice:
     runs-on: ubuntu-latest
     steps:
       - name: Print the input tag to STDOUT
         run: echo HELLO
-      # - name: Report to slack
-      #   uses: ravsamhq/notify-slack-action@v1
-      #   with:
-      #     status: ${{ steps.check-workflow-status.outputs.status }}
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Report to slack
+        uses: ravsamhq/notify-slack-action@v1
+        with:
+          status: ${{ job.status }}
+          message_format: 'PRTITLE'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
