--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,6 @@ jobs:
         uses: ravsamhq/notify-slack-action@v1
         with:
           status: ${{ job.status }}
-          message_format: '${{ github.event.pull_request.title }} ${{ github.event.pull_request.action }}'
+          message_format: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
