--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -46,10 +46,21 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.title, 'dependenc') && ( github.event.action == 'opened' || github.event.action == 'reopened' || github.event.pull_request.merged == true)
     steps:
-      - name: Report to slack
+      - name: Report PR merge to slack
+        if: ${{ github.event.pull_request.merged == true }}
         uses: ravsamhq/notify-slack-action@v1
         with:
           status: ${{ job.status }}
-          message_format: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
+          notification_title: '${{ github.event.pull_request.title }} merged'
+          message_format: '${{ github.event.pull_request.title }} merged'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Report PR opened to slack
+        if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+        uses: ravsamhq/notify-slack-action@v1
+        with:
+          status: ${{ job.status }}
+          notification_title: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
+          message_format: '${{ github.event.pull_request.title }} ${{ github.event.action }} ( merged: ${{github.event.pull_request.merged}})'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
