--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,10 +3,12 @@ name: Check Set-Up, Build, Test
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches:
-    - master
+  # push:
+  #   branches:
+  #   - master
   pull_request:
+    types:
+      - closed
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -44,9 +46,11 @@ jobs:
   dependencies-pr-status:
     name: "Dependencies PR status"
     runs-on: ubuntu-latest
-    if: contains(github.event.pull_request.title, 'dependenc') && ( github.event.action == 'opened' || github.event.action == 'reopened' || github.event.pull_request.merged == true)
+    # if: contains(github.event.pull_request.title, 'dependenc') && ( github.event.action == 'opened' || github.event.action == 'reopened' || github.event.pull_request.merged == true)
+    # if: contains(github.event.pull_request.title, 'dependenc') && ( github.event.action == 'opened' || github.event.action == 'reopened' || github.event.pull_request.merged == true)
+    if: github.event.pull_request.merged == true
     steps:
-      - name: Report PR merge to slack
+      - name: Report PR merged to slack
         if: ${{ github.event.pull_request.merged == true }}
         uses: ravsamhq/notify-slack-action@v1
         with:
@@ -55,12 +59,13 @@ jobs:
           message_format: '${{ github.event.pull_request.title }} merged'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      - name: Report PR opened to slack
-        if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-        uses: ravsamhq/notify-slack-action@v1
-        with:
-          status: ${{ job.status }}
-          notification_title: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
-          message_format: '${{ github.event.pull_request.title }} ${{ github.event.action }} ( merged: ${{github.event.pull_request.merged}})'
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      # - name: Report PR opened to slack
+      #   if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+      #   uses: ravsamhq/notify-slack-action@v1
+      #   with:
+      #     status: ${{ job.status }}
+      #     notification_title: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
+      #     message_format: '${{ github.event.pull_request.title }} ${{ github.event.action }}'
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
