--- a/.github/workflows/turing-dev-docker.yml
+++ b/.github/workflows/turing-dev-docker.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           tag=${{ github.event.inputs.tag }}
           docker_tag="${tag:1}"
-          docker build -f ./docker/turing/Dockerfile -t oaknetwork/turing-dev:$docker_tag .
-          docker tag oaknetwork/turing:$docker_tag oaknetwork/turing-dev:latest
-          docker push oaknetwork/turing-dev:$docker_tag
-          docker push oaknetwork/turing-dev:latest
+          docker build -f ./docker/turing/Dockerfile -t imstar15/turing-dev:$docker_tag .
+          docker tag imstar15/turing:$docker_tag imstar15/turing-dev:latest
+          docker push imstar15/turing-dev:$docker_tag
+          docker push imstar15/turing-dev:latest
