--- a/pallets/automation-time/Cargo.toml
+++ b/pallets/automation-time/Cargo.toml
@@ -22,34 +22,34 @@ scale-info = { version = "2.1", default-features = false, features = [
 log = { version = "0.4.17", default-features = false }
 
 # Polkadot
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
+polkadot-parachain = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
+xcm = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
 
 # Cumulus dependencies
-cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
-cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
+cumulus-pallet-xcm = { git = 'https://github.com/imstar15/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
+cumulus-primitives-core = { git = 'https://github.com/imstar15/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
 
 # Substrate Dependencies
 ## Substrate Primitive Dependencies
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-runtime = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-std = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 ## Substrate FRAME Dependencies
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+frame-benchmarking = { git = "https://github.com/imstar15/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
+frame-support = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+frame-system = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 ## Substrate Pallet Dependencies
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+pallet-timestamp = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 ## Polkdadot deps
-xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
+xcm-builder = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
 
 ## Moonbeam Dependencies
-pallet-parachain-staking = { git = "https://github.com/OAK-Foundation/moonbeam", default-features = false, branch = "oak-polkadot-v0.9.29" }
+pallet-parachain-staking = { git = "https://github.com/imstar15/moonbeam", default-features = false, branch = "oak-polkadot-v0.9.29" }
 
 ## ORML
-orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2c48b626addafbea0227c068c9ab0fc16666b1b5" }
+orml-traits = { git = "https://github.com/imstar15/open-runtime-module-library", default-features = false, rev = "117b7f47742b54e6601e223c27f305c2a44e4b5e" }
 
 ## Local
 pallet-automation-time-rpc-runtime-api = { path = "./rpc/runtime-api", default-features = false }
@@ -58,15 +58,15 @@ pallet-xcmp-handler = { path = "../xcmp-handler", default-features = false }
 
 [dev-dependencies]
 serde = { version = "1.0.144" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
+sp-core = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-io = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+pallet-balances = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
 
-pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.29' }
-xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.29' }
+pallet-xcm = { git = 'https://github.com/imstar15/polkadot', default-features = false, branch = 'release-v0.9.29' }
+xcm-executor = { git = 'https://github.com/imstar15/polkadot', default-features = false, branch = 'release-v0.9.29' }
 
-orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2c48b626addafbea0227c068c9ab0fc16666b1b5" }
-orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2c48b626addafbea0227c068c9ab0fc16666b1b5" }
+orml-currencies = { git = "https://github.com/imstar15/open-runtime-module-library", default-features = false, rev = "117b7f47742b54e6601e223c27f305c2a44e4b5e" }
+orml-tokens = { git = "https://github.com/imstar15/open-runtime-module-library", default-features = false, rev = "117b7f47742b54e6601e223c27f305c2a44e4b5e" }
 
 [features]
 default = ["std"]
