--- a/pallets/automation-time/rpc/Cargo.toml
+++ b/pallets/automation-time/rpc/Cargo.toml
@@ -15,11 +15,11 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "3.1.3" }
 jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
 
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
+sp-runtime = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-api = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-blockchain = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-block-builder = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-core = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-rpc = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
 
 pallet-automation-time-rpc-runtime-api = { path = "./runtime-api" }
