--- a/pallets/xcmp-handler/Cargo.toml
+++ b/pallets/xcmp-handler/Cargo.toml
@@ -22,38 +22,38 @@ serde = { version = "1.0.144" }
 
 # Substrate Dependencies
 ## Substrate Primitive Dependencies
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-std = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-runtime = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 ## Substrate FRAME Dependencies
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+frame-benchmarking = { git = "https://github.com/imstar15/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
+frame-support = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+frame-system = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 # Cumulus dependencies
-cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.29', default-features = false }
+cumulus-primitives-core = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.29', default-features = false }
 
 
 # Polkadot Dependencies
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
+polkadot-parachain = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
+xcm = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
+xcm-executor = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
 
 [dev-dependencies]
 # Substrate
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+pallet-balances = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.29" }
+sp-core = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
+sp-io = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 
 # Cumulus dependencies
-cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
-parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.29' }
+cumulus-pallet-xcm = { git = 'https://github.com/imstar15/cumulus', default-features = false, branch = 'polkadot-v0.9.29' }
+parachain-info = { git = 'https://github.com/imstar15/cumulus', branch = 'polkadot-v0.9.29' }
 
 # Polkadot Dependencies
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.29' }
-xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }
-xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.29' }
+polkadot-parachain = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "release-v0.9.29" }
+pallet-xcm = { git = 'https://github.com/imstar15/polkadot', default-features = false, branch = 'release-v0.9.29' }
+xcm-builder = { git = "https://github.com/imstar15/polkadot", branch = "release-v0.9.29" }
+xcm-executor = { git = 'https://github.com/imstar15/polkadot', default-features = false, branch = 'release-v0.9.29' }
 
 [features]
 default = ["std"]
