--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -11,24 +11,24 @@ edition = "2021"
 [dependencies]
 # Substrate Dependencies
 ## Substrate Primitive Dependencies
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+sp-std = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+sp-runtime = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
 
 ## Substrate FRAME Dependencies
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
+frame-support = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+frame-system = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.38", default-features = false }
 
 ## Substrate Pallet Dependencies
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
-pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+pallet-balances = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+pallet-transaction-payment = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
+pallet-treasury = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.38" }
 
 ## Polkdadot deps
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
+polkadot-primitives = { git = "https://github.com/imstar15/polkadot", branch = "release-v0.9.38", default-features = false }
 
 ## ORML
-orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
-orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
+orml-traits = { git = "https://github.com/imstar15/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
+orml-tokens = { git = "https://github.com/imstar15/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.38" }
 
 # Local Dependencies
 primitives = { path = "../../primitives", default-features = false }
